--- a/assets/scss/components/site-header/_site-header.scss
+++ b/assets/scss/components/site-header/_site-header.scss
@@ -43,6 +43,7 @@
   background-size: 3500px 130%;
   background-position: top;
   padding-bottom: 50px;
+  padding-top: 20px;
   background-repeat: no-repeat;
 
   .site-header__inside {
@@ -165,6 +166,7 @@
   .site-header.main {
     max-width: 2000px;
     margin: 0 auto;
+    padding-top: 0;
     background-image: url(../img/site-header-background.png);
     background-size: 100% 100%;
     background-position: top;
